# Quant-For-Donkey

./: .env.example  .gitignore  CHANGELOG.md  MODULE_LOGIC.md  README.md  USAGE.md  check_learning.py  config_custom_models.json  dashboard.py  demo_realtime_price.py  demo_strategies.py  main.py  pyproject.toml  requirements-dev.txt  requirements-extra.txt  requirements.txt  test_logic_guard.py  test_modules.py
engine/: advanced_dca.py  agents.py  ai_brain.py  alert_system.py  backtest_engine.py  backtest_realistic.py  backtest_walkforward.py  backtester.py  backtesting_engine.py  custom_llm.py  data_aggregator.py  deliberation.py  exchanges.py  fixed_learning.py  forecaster.py  historical_data.py  ict_structures.py  learning_data.py  learning_loop.py  logging_utils.py  logic_guard.py  macro.py  macro_time.py  main_learning.py  market_data_manager.py  monthly_planner.py  multi_exchange.py  offline_learner.py  onchain.py  online_learner.py  order_flow.py  paper_trading.py  portfolio.py  portfolio_manager.py  price_stream.py  reflection.py  regime.py  retry_utils.py  risk.py  risk_fixed.py  (+10 more)
engine/integrations/: __init__.py  freqtrade_integration.py  hummingbot_integration.py  vectorbt_engine.py  vnpy_integration.py
engine/strategies/: atr_breakout.py  bollinger_squeeze.py  ema_crossover.py  grid_trading.py  multi_strategy.py  (+1 more)
memory/: backtest_results.json  dca_history.json  decision_history.json  learning_base.json
models/: model_registry.pkl  model_v1.pkl
scripts/: auto_discovery.py  install.ps1  install.sh
tests/: test_extended.py  test_kelly.py  unit_tests.py
