[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-for-donkey"
version = "4.3.5"
description = "Quant for Donkey — engine + Streamlit dashboard (SOL / crypto quant toolkit)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "yfinance>=0.2.36",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.3",
    "ccxt>=4.2.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "openai>=1.10.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]
extra = [
    "ta>=0.11.0",
    "ta-lib>=0.4.28",
    "tweepy>=4.14.0",
    "praw>=7.7.1",
    "solders>=0.20.0",
    "scipy>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*"]
